--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "clean-db": "node scripts/clean-database.js",
     "init-db": "node scripts/init-database.js",
     "setup": "npm install && npm run clean-db && npm run init-db",
+    "cleanup": "node scripts/cleanup-files.js",
+    "cleanup:report": "node scripts/cleanup-files.js --report",
+    "cleanup:dry-run": "node scripts/cleanup-files.js --dry-run",
     "pm2:start": "pm2 start ecosystem.config.js",
     "pm2:stop": "pm2 stop ecosystem.config.js",
     "pm2:restart": "pm2 restart ecosystem.config.js",
@@ -32,6 +35,7 @@
     "bcrypt": "^5.1.1",
     "bull": "^4.11.5",
     "cors": "^2.8.5",
+    "cron": "^3.1.6",
     "csv-parser": "^3.2.0",
     "dotenv": "^16.3.1",
     "exceljs": "^4.4.0",
@@ -46,6 +50,7 @@
     "mongoose": "^8.0.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
     "redis": "^4.7.1",
     "winston": "^3.11.0",
     "winston-daily-rotate-file": "^4.7.1",
