--- a/nginx.conf
+++ b/nginx.conf
@@ -82,11 +82,12 @@ http {
         add_header X-Robots-Tag "noindex, nofollow" always;
 
         # 前端静态文件根目录（Next.js 静态导出目录）
-        root D:/code/yushengfrontend/out;
+        root C:/code/yushengfrontend/out;
         index index.html;
 
         # API 代理到后端
         location /api/ {
+            # 保留完整的URI路径传递给后端
             proxy_pass http://smart_match_backend;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
@@ -96,6 +97,22 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_cache_bypass $http_upgrade;
+            
+            # CORS 头设置（如果后端没有处理）
+            add_header Access-Control-Allow-Origin * always;
+            add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
+            add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With" always;
+            
+            # 处理预检请求
+            if ($request_method = 'OPTIONS') {
+                add_header Access-Control-Allow-Origin * always;
+                add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
+                add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With" always;
+                add_header Access-Control-Max-Age 1728000;
+                add_header Content-Type 'text/plain charset=UTF-8';
+                add_header Content-Length 0;
+                return 204;
+            }
             
             # 文件上传相关配置
             proxy_connect_timeout       300;
@@ -110,6 +127,16 @@ http {
         # 健康检查端点代理
         location /health {
             proxy_pass http://smart_match_backend;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # 调试：测试后端连接
+        location /api-test {
+            proxy_pass http://smart_match_backend/api;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
